noticias y footer terminado en mobile

--- a/index.jade
+++ b/index.jade
@@ -21,7 +21,7 @@ html(lang="es")
 					ul.menu
 						li.menu__item: a.menu__link(href="#") Home
 						li.menu__item: a.menu__link(href="#") About us
-						li.menu__item: a.menu__link(href="#") Services
+						li.menu__item: a.menu__link(href="#servicios") Services
 						li.menu__item: a.menu__link(href="#") Blog
 						li.menu__item: a.menu__link(href="#") Contacts
 
@@ -74,14 +74,14 @@ html(lang="es")
 				.caja
 					.cliente
 						img.cliente__img(src="http://lorempixel.com/300/200") 
-						h3.clientes__titulo Cliente I
+						h3.cliente__titulo Cliente I
 						p.cliente__description
 							|  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur quae laudantium iure ducimus excepturi architecto, nisi temporibus nam sequi. Voluptatem eos obcaecati earum praesentium, optio mollitia ad vero adipisci ipsum!
 				
 				.caja
 					.cliente
 						img.cliente__img(src="http://lorempixel.com/300/200") 
-						h3.clientes__titulo Cliente II
+						h3.cliente__titulo Cliente II
 						p.cliente__description
 							|  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur quae laudantium iure ducimus excepturi architecto, nisi temporibus nam sequi. Voluptatem eos obcaecati earum praesentium, optio mollitia ad vero adipisci ipsum!
 			
@@ -89,7 +89,7 @@ html(lang="es")
 				.caja
 					.cliente
 						img.cliente__img(src="http://lorempixel.com/300/200") 
-						h3.clientes__titulo Cliente III
+						h3.cliente__titulo Cliente III
 						p.cliente__description
 							|  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur quae laudantium iure ducimus excepturi architecto, nisi temporibus nam sequi. Voluptatem eos obcaecati earum praesentium, optio mollitia ad vero adipisci ipsum!
 
