--- a/tema/scss/estilos.scss
+++ b/tema/scss/estilos.scss
@@ -20,6 +20,7 @@
 	@import "tema/banner";
 	@import "tema/servicios";
 	@import "tema/clientes";
+	@import "tema/noticias";
 
 // Modulos. Los estilos propios construidos para el proyecto
 	@import "modulos/modulos";
