--- a/index.jade
+++ b/index.jade
@@ -66,29 +66,31 @@ html(lang="es")
 
 		section#clientes
 			.grupo
-				.caja
+				//-Apartir de Web 25% 4 columnas
+				.caja.web-25 
 					.clientes
 						h2.clientes__titulo This is the list of our recent clients
 						.clientes__nav
 							.clientes__nav__item.clientes__nav__item--prev
 							.clientes__nav__item.clientes__nav__item--next
-
-				.caja
+				//-Apartir de Web 25% 4 columnas
+				.caja.web-25 
 					.cliente
 						img.cliente__img(src="http://lorempixel.com/600/400") 
 						h3.cliente__titulo Cliente I
 						p.cliente__description
 							|  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur quae laudantium iure ducimus excepturi architecto, nisi temporibus nam sequi. Voluptatem eos obcaecati earum praesentium, optio mollitia ad vero adipisci ipsum!
 				
-				.caja
+				//-Apartir de Web 25% 4 columnas
+				.caja.web-25 
 					.cliente
 						img.cliente__img(src="http://lorempixel.com/600/400") 
 						h3.cliente__titulo Cliente II
 						p.cliente__description
 							|  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur quae laudantium iure ducimus excepturi architecto, nisi temporibus nam sequi. Voluptatem eos obcaecati earum praesentium, optio mollitia ad vero adipisci ipsum!
 			
-				
-				.caja
+				//-Apartir de Web 25% 4 columnas
+				.caja.web-25 
 					.cliente
 						img.cliente__img(src="http://lorempixel.com/600/400") 
 						h3.cliente__titulo Cliente III
@@ -122,7 +124,7 @@ html(lang="es")
 							span Vestibulum lacults 
 						img.noticia__img(src="http://lorempixel.com/600/400")
 						p.noticia__description
-							|   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores in sint cumque aut officia temporibus, ad eum pariatur, perferendis illum. Qui similique quaerat nam eius praesentium vitae pariatur. Eum, esse!
+							|   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores in sint cumque aut officia temporibus, ad eum 	pariatur, perferendis illum. Qui similique quaerat nam eius praesentium vitae pariatur. Eum, esse!
 
 
 		section#footer
