Hair Doctor web terminado , totalmente responsive

--- a/index.jade
+++ b/index.jade
@@ -10,13 +10,13 @@ html(lang="es")
 	body
 		header#header
 			.grupo
-				.caja
+				.caja.web-30
 					h2.logo Hair 
 						span Doctor 
 					p.subtitle.
 						A permanent hair loss solution
 
-				.caja
+				.caja.web-70
 					#mostrar-menu Menu
 					ul.menu
 						li.menu__item: a.menu__link(href="#") Home
@@ -28,7 +28,8 @@ html(lang="es")
 			.grupo
 				.caja
 					.banner
-						img(src="http://lorempixel.com/1000/450", alt="")
+						img(src="http://escueladigital.pe/labs/hair-doctor/img/banner.jpg", alt="")
+						//-img(src="http://lorempixel.com/1000/450", alt="")
 						.copy
 							h2.copy__title Effective 
 								span Hair Restoration
@@ -106,7 +107,7 @@ html(lang="es")
 							span Vestibulum lacults 
 						img.noticia__img(src="http://lorempixel.com/600/400")
 						p.noticia__description
-							|  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam blanditiis perferendis voluptate ex eum reprehenderit harum ducimus dolorum, magni porro alias iusto deleniti magnam, libero quas, beatae aperiam earum ipsam.
+							|   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores in sint cumque aut officia temporibus, ad eum 	pariatur, perferendis illum. Qui similique quaerat nam eius praesentium vitae pariatur. Eum, esse!
 							
 				//- 3 columnas desde tablet
 				.caja.tablet-1-3
@@ -115,7 +116,7 @@ html(lang="es")
 							span Vestibulum lacults 
 						img.noticia__img(src="http://lorempixel.com/600/400")
 						p.noticia__description
-							|  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam blanditiis perferendis voluptate ex eum reprehenderit harum ducimus dolorum, magni porro alias iusto deleniti magnam, libero quas, beatae aperiam earum ipsam.
+							|   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores in sint cumque aut officia temporibus, ad eum 	pariatur, perferendis illum. Qui similique quaerat nam eius praesentium vitae pariatur. Eum, esse!
 				
 				//- 3 columnas desde tablet
 				.caja.tablet-1-3
