--- a/tema/scss/base/_base.scss
+++ b/tema/scss/base/_base.scss
@@ -16,7 +16,7 @@
 		text-decoration : none;
 
 		&:hover {
-			color : darken($link--color,10%);
+			//-color : darken($link--color,10%);
 		}
 	}
 
