--- a/tema/scss/librerias/ed-grid/_ed-grid.scss
+++ b/tema/scss/librerias/ed-grid/_ed-grid.scss
@@ -1,7 +1,7 @@
 // VARIABLES DE ED GRID
 
 	// Ancho máximo de cada grupo
-		$grupo--max-width : 1100px;
+		$grupo--max-width : 960px;//1100px;
 		
 	// Separación entre cajas
 		$caja--separacion : 30px;
