--- a/tema/scss/tema/_menus.scss
+++ b/tema/scss/tema/_menus.scss
@@ -4,24 +4,65 @@
 	padding-left: 1em;
 	line-height: 2.5em;
 
-	@include mostrar-menu($color1,1em)
+	@include mostrar-menu($color1,1em);
+
+	@include desde(web){
+		display:none;
+	}
 
 }
 .menu{
-	background: lighten($color2, 10%);
-	display: none;
+	//
 	list-style: none;
 	padding: 0;
 	margin: 0;
-	&__item{
 
+	@include hasta(web){
+		display: none;
+		background: lighten($color2, 10%);
+
+		&__link{
+			color: $color1;
+			padding-left: 1em;
+			line-height: 2.5;
+			
+				&:hover{
+					color: darken($color1,10%);
+				}
+			}
+		}
+
+	@include desde(web){
+		display: table;
+		float: right;
+		margin-top: 1.5em;
 	}
-	&__link{
-		color: $color1;
-		line-height: 2.5;
-		padding-left: 1em;
-		&:hover{
-			color: darken($color1, 10%);
+
+
+	
+
+		@include desde(web){
+		&__item {
+			float: left;
+		}
+		&__link {
+
+
+			line-height: 2.5;
+			color: #fff;
+			text-transform: uppercase;
+			padding: 0 1.5em;
+			font-weight: 300;
+			font-family: $header--font-family;
+			opacity: .7;
+			border-right: 1px solid rgba(#fff,.3);
+				&:hover{
+					opacity: 1;
+				}
+					
+
 		}
 	}
+
 }
+	
