--- a/tema/scss/tema/_menus.scss
+++ b/tema/scss/tema/_menus.scss
@@ -19,15 +19,16 @@
 
 	@include hasta(web){
 		display: none;
-		background: lighten($color2, 10%);
+		background: lighten($color1, 5%);
+		box-shadow: 0 0 1px lighten($color1, 20%);
 
 		&__link{
-			color: $color1;
+			color: $color-blanco;
 			padding-left: 1em;
 			line-height: 2.5;
 			
 				&:hover{
-					color: darken($color1,10%);
+					color: saturate($color2,10%);
 				}
 			}
 		}
@@ -54,7 +55,7 @@
 			padding: 0 1.5em;
 			font-weight: 300;
 			font-family: $header--font-family;
-			opacity: .7;
+			opacity: .5;
 			border-right: 1px solid rgba(#fff,.3);
 				&:hover{
 					opacity: 1;
